fix: fix compile issue